--- a/gk/home-dark.html
+++ b/gk/home-dark.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>God's Kid Dark</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/home-dark.css?crc=496286928" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/home-dark.css?crc=4062648449" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#u5637 {  pointer-events: none;}</style>
   <!--HTML Widget code-->
@@ -565,12 +565,12 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u3839').registerOpacityScrollEffect([{"in":[-Infinity,509],"opacity":0,"fade":0},{"opacity":0,"in":[509,509]},{"in":[509,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u3921').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3921').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"opacity":100,"in":[0,0]},{"in":[0,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
-$('#u3913').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3913').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"opacity":100,"in":[0,0]},{"in":[0,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
-$('#u3920').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,5],"in":[0,Infinity]}]);/* scroll effect */
+$('#u3839').registerOpacityScrollEffect([{"in":[-Infinity,509],"opacity":0,"fade":0},{"in":[509,509],"opacity":0},{"in":[509,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
+$('#u3921').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u3921').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
+$('#u3913').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u3913').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u3920').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,5]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
