--- a/gk/index.html
+++ b/gk/index.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>God's Kid</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4180303766" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=262828835" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#u5614 {  pointer-events: none;}</style>
   <!--HTML Widget code-->
@@ -556,23 +556,23 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u2581').registerOpacityScrollEffect([{"in":[-Infinity,509],"opacity":0,"fade":0},{"opacity":0,"in":[509,509]},{"in":[509,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
-$('#u2158').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,100]},{"speed":[0,2],"in":[100,Infinity]}]);/* scroll effect */
-$('#u2158').registerOpacityScrollEffect([{"in":[-Infinity,100],"opacity":100,"fade":0},{"opacity":100,"in":[100,100]},{"in":[100,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
-$('#u2159').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[4.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2160').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2160').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"opacity":100,"in":[0,0]},{"in":[0,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
-$('#u2162').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-7,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2163').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[6.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2164').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-4,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2165').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-2.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2168').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[5.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2169').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[2,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2170').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,5],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2171').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-3,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2172').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[3.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2173').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2174').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-6,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2581').registerOpacityScrollEffect([{"in":[-Infinity,509],"opacity":0,"fade":0},{"in":[509,509],"opacity":0},{"in":[509,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
+$('#u2158').registerPositionScrollEffect([{"in":[-Infinity,100],"speed":[0,0]},{"in":[100,Infinity],"speed":[0,2]}]);/* scroll effect */
+$('#u2158').registerOpacityScrollEffect([{"in":[-Infinity,100],"opacity":100,"fade":0},{"in":[100,100],"opacity":100},{"in":[100,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
+$('#u2159').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[4.5,0]}]);/* scroll effect */
+$('#u2160').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2160').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u2162').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-7,0]}]);/* scroll effect */
+$('#u2163').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[6.5,0]}]);/* scroll effect */
+$('#u2164').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-4,0]}]);/* scroll effect */
+$('#u2165').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-2.5,0]}]);/* scroll effect */
+$('#u2168').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[5.5,0]}]);/* scroll effect */
+$('#u2169').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[2,0]}]);/* scroll effect */
+$('#u2170').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,5]}]);/* scroll effect */
+$('#u2171').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-3,0]}]);/* scroll effect */
+$('#u2172').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[3.5,0]}]);/* scroll effect */
+$('#u2173').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-5,0]}]);/* scroll effect */
+$('#u2174').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-6,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
