--- a/gk/phone/index.html
+++ b/gk/phone/index.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>God's Kid</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="../css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=138024387" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3840670373" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#u5571 {  pointer-events: none;}</style>
   <!--/*
@@ -48,8 +48,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <!-- /m_editable -->
     <div class="ose_pre_init mse_pre_init" id="u2801"><!-- content --></div>
     <div class="ose_pre_init mse_pre_init" id="u2584"><!-- simple frame --></div>
-    <div class="museBGSize CLOUD5 mse_pre_init" id="u3170"><!-- content --></div>
     <div class="museBGSize ose_pre_init mse_pre_init" id="u2586"><!-- content --></div>
+    <div class="museBGSize CLOUD5 mse_pre_init" id="u3170"><!-- content --></div>
     <div class="CLOUD2 museBGSize mse_pre_init" id="u2590"><!-- content --></div>
     <div class="CLOUD1 museBGSize mse_pre_init" id="u2592"><!-- content --></div>
     <div class="museBGSize CLOUD10 mse_pre_init" id="u3169"><!-- content --></div>
@@ -387,32 +387,32 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u2820').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2793').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2794').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2795').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2797-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2834-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2798-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2799-4').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2801').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,649.05]},{"speed":[0,0],"in":[649.05,Infinity]}]);/* scroll effect */
-$('#u2801').registerOpacityScrollEffect([{"in":[-Infinity,649.05],"opacity":0,"fade":0},{"opacity":0,"in":[649.05,649.05]},{"in":[649.05,Infinity],"opacity":100,"fade":25}]);/* scroll effect */
-$('#u2584').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,100]},{"speed":[0,2],"in":[100,Infinity]}]);/* scroll effect */
-$('#u2584').registerOpacityScrollEffect([{"in":[-Infinity,100],"opacity":100,"fade":0},{"opacity":100,"in":[100,100]},{"in":[100,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
-$('#u3170').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-4,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2586').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2586').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"opacity":100,"in":[0,0]},{"in":[0,Infinity],"opacity":0,"fade":20}]);/* scroll effect */
-$('#u2590').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-2.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2592').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[2,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3169').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[6.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3218').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3172').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[5.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3174').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-3,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3205').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[-3,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3287').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[3,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u3175').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[3.5,0],"in":[0,Infinity]}]);/* scroll effect */
-$('#u2593').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,5],"in":[0,Infinity]}]);/* scroll effect */
-$('#u5571').registerPositionScrollEffect([{"speed":[0,0],"in":[-Infinity,0]},{"speed":[0,0],"in":[0,Infinity]}]);/* scroll effect */
+$('#u2820').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2793').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2794').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2795').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2797-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2834-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2798-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2799-4').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2801').registerPositionScrollEffect([{"in":[-Infinity,649.05],"speed":[0,0]},{"in":[649.05,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2801').registerOpacityScrollEffect([{"in":[-Infinity,649.05],"opacity":0,"fade":0},{"in":[649.05,649.05],"opacity":0},{"in":[649.05,Infinity],"opacity":100,"fade":25}]);/* scroll effect */
+$('#u2584').registerPositionScrollEffect([{"in":[-Infinity,100],"speed":[0,0]},{"in":[100,Infinity],"speed":[0,2]}]);/* scroll effect */
+$('#u2584').registerOpacityScrollEffect([{"in":[-Infinity,100],"opacity":100,"fade":0},{"in":[100,100],"opacity":100},{"in":[100,Infinity],"opacity":0,"fade":100}]);/* scroll effect */
+$('#u2586').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
+$('#u2586').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":100,"fade":0},{"in":[0,0],"opacity":100},{"in":[0,Infinity],"opacity":0,"fade":20}]);/* scroll effect */
+$('#u3170').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-4,0]}]);/* scroll effect */
+$('#u2590').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-2.5,0]}]);/* scroll effect */
+$('#u2592').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[2,0]}]);/* scroll effect */
+$('#u3169').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[6.5,0]}]);/* scroll effect */
+$('#u3218').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-5,0]}]);/* scroll effect */
+$('#u3172').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[5.5,0]}]);/* scroll effect */
+$('#u3174').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-3,0]}]);/* scroll effect */
+$('#u3205').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[-3,0]}]);/* scroll effect */
+$('#u3287').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[3,0]}]);/* scroll effect */
+$('#u3175').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[3.5,0]}]);/* scroll effect */
+$('#u2593').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,5]}]);/* scroll effect */
+$('#u5571').registerPositionScrollEffect([{"in":[-Infinity,0],"speed":[0,0]},{"in":[0,Infinity],"speed":[0,0]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
