--- a/gk/about-us-dark.html
+++ b/gk/about-us-dark.html
@@ -22,7 +22,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About Us Dark</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us-dark.css?crc=4124987962" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us-dark.css?crc=67226514" id="pagesheet"/>
     <!--custom head HTML-->
   <style>#u5648 {  pointer-events: none;}</style>
   <!--/*
@@ -126,7 +126,7 @@ Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.initializeAnimations();/* animations */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u4907').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":0,"fade":0},{"opacity":0,"in":[0,0]},{"in":[0,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
+$('#u4907').registerOpacityScrollEffect([{"in":[-Infinity,0],"opacity":0,"fade":0},{"in":[0,0],"opacity":0},{"in":[0,Infinity],"opacity":100,"fade":50}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
